minor modifications to greasylog

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,18 +24,24 @@ include @my_tbb_root@/build/common.inc
 AM_CPPFLAGS  += -DTHREAD_ENGINE -I@my_tbb_root@/include 
 AM_LDFLAGS    = -L@my_tbb_root@/build/$(tbb_build_prefix)_release -ltbb 
 
-#LIBRARY=  @my_tbb_root@/build/$(tbb_build_prefix)_release/libtbb.so
+ACLOCAL_AMFLAGS = -I m4
 
-plugindir=  /home/jonarbo/Projects/BSC/GREASY/greasy/branch/greasy-git/GREASY/@my_tbb_root@/build/$(tbb_build_prefix)_release  
-plugin_LTLIBRARIES= tbb.la
-tbb_la_LDFLAGS= -module
-
+#lib_LTLIBRARIES = libtbbproxy.la
+#libtbbproxy_la_SOURCES  = dummy.cpp
+#libtbb_la_LIBADD   = -ltbb 
+#libtbb_la_LDFLAGS =  -L@my_tbb_root@/build/$(tbb_build_prefix)_release -ltbb
+#greasybin_LDADD	   =  libtbb.la
+#greasybin_LDFLAGS  =  -ltbbproxy
+#greasybin_LDFLAGS  = -L@my_tbb_root@/build/$(tbb_build_prefix)_release -ltbb 
+#greasybin_LDADD	   = libtbb.so.2
+#libtbb.la
 
 #install-exec-local:
-#	@mkdir -p @greasy_lib@
-#	@cp @my_tbb_root@/build/$(tbb_build_prefix)_release/libtbb.so @greasy_lib@/
+#	test -z @greasy_libdir@ || $(MKDIR_P) @greasy_libdir@
+#	$(INSTALL_PROGRAM) @my_tbb_root@/build/$(tbb_build_prefix)_release/libtbb.so  "@greasy_libdir@"
+	
+.PHONY: tbb 
 
-.PHONY: tbb tbb.lo
 tbb:
 	@echo "Compiling local version of TBB..."
 	@cd @my_tbb_root@ && $(MAKE) $(AM_MAKEFLAGS) tbb && cd - 
